Fixed expandable layout, consolidated selects
Made paired select tags uniform throughout the site
Fixed some instances of counted boxes overlapping count numbers

--- a/_sass/layout/_plate.scss
+++ b/_sass/layout/_plate.scss
@@ -242,6 +242,8 @@
         background: transparent;
         border: none;
         padding: 3px 0 0 7px;
+        appearance: none;
+        -moz-appearance: none;
         -webkit-appearance: none;
       }
     }
